# Autonom-Vehicles-Projects

./: LICENSE
Advanced Computer Vision/: FindingLanes_SearchFromPrior.ipynb  Implement_Sliding_Windows.ipynb  Lane_histogram.ipynb  Measure_Curvature_1.ipynb  Measurement_curvature_2.ipynb
Camera Calibration/: Correction_Distortion.ipynb  Finding_Corners.ipynb  Perspective_Transform.ipynb
Color Spaces/: COLOR_AND_GRADIENT.ipynb  Direction_Gradient.ipynb  HLS_RGB.ipynb  Magnitude_Gradient.ipynb  Sobel_Filter.ipynb
Kalman Filter/: Eval_KF_Performance.ipynb  Extented_KF.cpp  Jacobian_Matrix.ipynb  Keeping Track of x and y (solution).ipynb  right angle robot solution.ipynb
Lane Detection/: CannyEdgeDetection.ipynb  ColorSelect_and_RegionMask.ipynb  Color_Selection.ipynb  FindingLanes_Project.ipynb  HoughTransform.ipynb
Lane Detection Project/: BTU_LANE_DETECTION.ipynb  P2.ipynb
LaneDetection_CARND/: binarization_process.py  calibration_process.py  line_process.py  main.py  perspective_process.py  test.ipynb
LaneDetection_DeepLearning_MLND/: detection.py  full_CNN_model.h5  pyTorch.ipynb  test.ipynb  training.py
Multi Modal Traffic Light Detection/: detect_light.py  fasterRCNN.py  fusion.py
Object Detection/: Color_Spaces.ipynb  Color_classify.ipynb  Extract_Feature.ipynb  HOG_classify.ipynb  Histogram_Color.ipynb  Match Template.ipynb  Sliding_window.ipynb  Spatial_binning.ipynb  car_notcar.ipynb  scikit_HOG.ipynb
PID Controller/: P Controller.ipynb  PD Controller.ipynb  PID Controller.ipynb  Parameter Optimization.ipynb
Path Planning/: A search.ipynb  Expansion_grid.ipynb  Firs_search.ipynb  optimum_policy.ipynb  print_path.ipynb  value_program.ipynb
Tensorflow/: CNN.ipynb  CNN_LENET.ipynb  DeepNeuralNetwork_tensorflow.ipynb  Linear_Function.ipynb  ReLU.ipynb  (+3 more)
carf_ROS/src/carf_lidar/: CMakeLists.txt  package.xml
carf_ROS/src/carf_lidar/scripts/: USBCom.py  lidar_path.py  tec_control.py
carf_ROS/src/carf_lidar/src/: path_planning.cpp
carf_ROS/src/tfmini_ros/: CMakeLists.txt
carf_ROS/src/tfmini_ros/src/: TFmini_front.cpp  TFmini_left.cpp  TFmini_right.cpp
(+110 files in other folders)
